--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NichoJS</title>
 </head>
-<script>
-    alert("hello world JS")
+<script src="./Nicho-video2/video2.js">
+    
 </script>
 <body>
     <h1>Hello World</h1>
