--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-//doc
+<!-- muốn cocmment ấn tổ hợp Crlt+/ -->
+<!-- //doc -->
 <html lang="en">
 
 <head>
@@ -7,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NichoJS</title>
 </head>
-<script src="./Nicho-video2/video2.js">
+<script src="./Nicho-I3/I3.js">
     
 </script>
 <body>
